k8s/ingress/dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '50m' # Set the maximum allowed request body size
    nginx.ingress.kubernetes.io/websocket-services: "chat-srv"
spec:
  tls:
  - hosts:
    - devhive.dev
    secretName: devhive-tls-development
  rules:
    - host: devhive.dev
      http:
        paths:
          - path: /api/v1/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /api/v1/admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin-srv
                port:
                  number: 3000
          - path: /api/v1/job/?(.*)
            pathType: Prefix
            backend:
              service:
                name: job-srv
                port:
                  number: 3000
          - path: /api/v1/profile/?(.*)
            pathType: Prefix
            backend:
              service:
                name: profile-srv
                port:
                  number: 3000
          - path: /api/v1/chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-srv
                port:
                  number: 3000
          - path: /api/v1/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-app-srvs
                port:
                  number: 3000
